// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders StyledTab 1`] = `
.c0 {
  background-color: #244fea;
  border: none;
  color: #ffffff;
  padding: 15px 32px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  -webkit-transition: background-color;
  transition: background-color;
  border-radius: 10px;
  cursor: pointer;
}

.c0:hover {
  -webkit-filter: brightness(1.3);
  filter: brightness(1.3);
}

.c0:disabled {
  -webkit-filter: brightness(1);
  filter: brightness(1);
  background-color: #cccccc;
  color: #666666;
  cursor: not-allowed;
}

<button
  className="c0"
/>
`;

exports[`renders Tab 1`] = `
.c0 {
  background-color: #244fea;
  border: none;
  color: #ffffff;
  padding: 15px 32px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  -webkit-transition: background-color;
  transition: background-color;
  border-radius: 10px;
  cursor: pointer;
}

.c0:hover {
  -webkit-filter: brightness(1.3);
  filter: brightness(1.3);
}

.c0:disabled {
  -webkit-filter: brightness(1);
  filter: brightness(1);
  background-color: #cccccc;
  color: #666666;
  cursor: not-allowed;
}

<div>
  <button
    class="c0"
    disabled=""
  >
    Test Tab
  </button>
</div>
`;

exports[`renders TabPanel 1`] = `
.c1 {
  background-color: green;
  border: none;
  color: #ffffff;
  padding: 15px 32px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  -webkit-transition: background-color;
  transition: background-color;
  border-radius: 10px;
  cursor: pointer;
}

.c1:hover {
  -webkit-filter: brightness(1.3);
  filter: brightness(1.3);
}

.c1:disabled {
  -webkit-filter: brightness(1);
  filter: brightness(1);
  background-color: #cccccc;
  color: #666666;
  cursor: not-allowed;
}

.c2 {
  background-color: #244fea;
  border: none;
  color: #ffffff;
  padding: 15px 32px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  -webkit-transition: background-color;
  transition: background-color;
  border-radius: 10px;
  cursor: pointer;
}

.c2:hover {
  -webkit-filter: brightness(1.3);
  filter: brightness(1.3);
}

.c2:disabled {
  -webkit-filter: brightness(1);
  filter: brightness(1);
  background-color: #cccccc;
  color: #666666;
  cursor: not-allowed;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 :not(:last-child) {
  margin: 0 10px 0 0;
}

<div>
  <div
    class="c0"
  >
    <div>
      <div>
        <button
          class="c1"
        >
          Tab 
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="example"
        >
          <div
            class="title"
          >
            Hello I am tooltip
          </div>
          <div
            class="text"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, atque eligendi eum laudantium illum, a maiores soluta odit doloremque ipsum nostrum error. Fugit magnam sint maiores, vero quae repellendus ad!
          </div>
        </div>
      </div>
    </div>
    <div>
      <div>
        <button
          class="c2"
        >
          Tab 
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="example"
        >
          <div
            class="title"
          >
            Hello I am tooltip
          </div>
          <div
            class="text"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, atque eligendi eum laudantium illum, a maiores soluta odit doloremque ipsum nostrum error. Fugit magnam sint maiores, vero quae repellendus ad!
          </div>
        </div>
      </div>
    </div>
    <div>
      <div>
        <button
          class="c2"
        >
          Tab 
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="example"
        >
          <div
            class="title"
          >
            Hello I am tooltip
          </div>
          <div
            class="text"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, atque eligendi eum laudantium illum, a maiores soluta odit doloremque ipsum nostrum error. Fugit magnam sint maiores, vero quae repellendus ad!
          </div>
        </div>
      </div>
    </div>
    <div>
      <div>
        <button
          class="c2"
        >
          Tab 
        </button>
      </div>
      <div
        class="content"
      >
        <div
          class="example"
        >
          <div
            class="title"
          >
            Hello I am tooltip
          </div>
          <div
            class="text"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, atque eligendi eum laudantium illum, a maiores soluta odit doloremque ipsum nostrum error. Fugit magnam sint maiores, vero quae repellendus ad!
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Tabs 1`] = `<div />`;

exports[`renders TabsColumn 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 15px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 :not(:last-child) {
  margin: 0 0 10px 0;
}

<div
  className="c0"
/>
`;

exports[`renders TabsRow 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 15px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 :not(:last-child) {
  margin: 0 10px 0 0;
}

<div
  className="c0"
/>
`;
